# DriveDiT

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
DriveDiT_DataCapture/: DriveDiT_DataCapture.gproj  README.md  RELEASE_CHECKLIST.md
DriveDiT_DataCapture/Configs/CaptureProfiles/: minimal.conf  production.conf  research.conf
DriveDiT_DataCapture/Prefabs/DataCapture/: DataCaptureGameMode.et
DriveDiT_DataCapture/Scripts/: validate.py
DriveDiT_DataCapture/Scripts/Game/DataCapture/: SCR_AnchorFrameSelector.c  SCR_BinarySerializer.c  SCR_CaptureOrchestrator.c  SCR_MLDataCollector.c  SCR_SceneEnumerator.c
DriveDiT_DataCapture/tools/: build.py
blocks/: __init__.py  dit_block.py  flow_matching.py
config/: __init__.py  base_config.py  config.py  model_config.py
core/: base.py  causal_jepa.py  components.py  vjepa_backbone.py
data/: __init__.py  collate.py  enfusion_loader.py  enfusion_preprocessing.py  hybrid_loader.py  large_scale_processing.py  pipeline.py  preprocessing.py  rust_loader.py  sampler.py  transforms.py  video_chunking.py  video_loader.py
docs/: API.md  BEST_PRACTICES.md  EXAMPLES.md  README.md  REFERENCES.md  WORLD_MODEL_DATA_CAPTURE_ARCHITECTURE.md
evaluation/: __init__.py  benchmarks.py  closed_loop.py  evaluators.py  metrics.py  visualization.py
inference/: __init__.py  optimization.py  pipeline.py  rollout.py  server.py
layers/: __init__.py  mha.py  mlp.py  moe.py  nn_helpers.py  rope.py  rope_v2.py  sla.py
layers/kernels/: __init__.py  fused_ops.py  moe_kernels.py  sla_kernels.py
models/: __init__.py  conditioning.py  dit_student.py  dit_teacher.py  vae3d.py  vae3d_v2.py  world_model.py
rust/drivedit-data/: Cargo.toml  README.md  pyproject.toml
rust/drivedit-data/benches/: data_loading.rs
rust/drivedit-data/src/: anchor.rs  config.rs  dataset.rs  depth.rs  enfcap.rs  enfcap_telemetry.rs  error.rs  frame.rs  frame_loader.rs  frames.rs  lib.rs  python.rs  scene.rs  session.rs  telemetry.rs
scripts/: build_rust.sh  process_data.py  profile_codebase.py  train.py
src/: SCR_CaptureTests.c  SCR_RoadPhysicsTestMission.c
src/docs/: drive_links.txt  starter.txt  thev1enfus.txt  v1.txt  v2.txt  v2enfus.txt  v3enfus.txt  workingv3.txt
src/enfusion/datacapture/: SCR_AIDrivingSimulator.c  SCR_AnchorFrameSelector.c  SCR_DepthRaycaster.c  SCR_DrivingSimDebugUI.c  SCR_MLDataCollector.c  SCR_MLScreenshotCapture.c  SCR_ModularCaptureExample.c  SCR_MultiCameraRig.c
src/enfusion/datacapture/core/: SCR_CaptureBuffer.c  SCR_CaptureConfig.c  SCR_CaptureOrchestrator.c  SCR_CaptureSerializer.c  SCR_ICaptureModule.c
src/enfusion/datacapture/modules/: SCR_DepthModule.c  SCR_RoadModule.c  SCR_SceneModule.c  SCR_TelemetryModule.c
src/enfusion/navigation/extractors/: SCR_LocalRoadExtractor.c  SCR_SimpleRoadExtractor.c
src/enfusion/navigation/visualizers/: SCR_EfficientRoadNet.c
src/temp/: tt.txt
tests/: __init__.py  conftest.py  test_e2e_pipeline.py  test_kernels.py  test_math_components.py  test_pipeline_math.py  test_rust_loader.py  test_self_forcing_plus.py  test_training_pipeline.py
tests/integration/: test_inference.py  test_training.py
tests/unit/: test_layers.py  test_models.py  test_utils.py
training/: __init__.py  cuda_optimized.py  distill.py  distributed.py  losses.py  losses_v2.py  repa_loss.py  self_forcing.py  self_forcing_plus.py  unified_trainer.py
training/kernels/: __init__.py  fused_augment.py  fused_normalize.py
utils/: __init__.py  math_utils.py  model_utils.py  tensor_utils.py
